# genai-rust-beginner-gui

./: AI_PROMPTS_USED.md  Cargo.toml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
src/: main.rs
