[package]
name = "weather-jokes-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
urlencoding = "2.1"
pollster = "0.3"

[profile.release]
opt-level = "s"
lto = true