[package]
name = "weather-jokes-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

[profile.release]
opt-level = "s"
lto = true